[package]
name = "online-judge-utils"
version = "0.1.21"
edition = "2021"
repository = "https://github.com/Vrtgs/online-judge-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
heap-array = ["dep:heap-array"]

[dependencies]
heap-array = { version = "0.1.9", optional = true }

[build-dependencies]
proc-macro2 = "1.0.93"